# hogtrace

./: .gitignore  Cargo.toml  README.md  build.rs  hogtrace-monaco-language.js  hogtrace-monaco-language.ts  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: API.md  FUZZING.md  QUICKSTART.md  README.md  SCRATCH.md  SPEC.md  TESTING.md  rust-vm.md
examples/: demo_api.py  demo_serialization.py  demo_vm.py  example_usage.py
fuzz/: fuzz_parser.py  fuzz_parser_persistent.py
fuzz-rust/fuzz_targets/: fuzz_lexer.rs
fuzz/corpus/: 01_basic.hogtrace  02_predicate.hogtrace  03_request_vars.hogtrace  04_sampling.hogtrace  05_complex.hogtrace  06_multi_probe.hogtrace
grammar/: HogTrace.g4
hogtrace/: __init__.py  _vm_rust.pyi  ast.py  builder.py  builtins.py  errors.py  evaluator.py  frame.py  limits.py  logger.py  posthog_client.py  request_store.py  serialization.py  vm.py  vm.pyi
proto/: bytecode.proto
scripts/: fuzz_reproduce.sh  fuzz_resume.sh  fuzz_start.sh
src/: constant_pool.rs  dispatcher.rs  executor.rs  lib.rs  main.rs  opcodes.rs  program.rs  python_bindings.rs  python_dispatcher.rs  value.rs
src/parser/: ast.rs  compiler.rs  error.rs  lexer.rs  mod.rs  tests.rs
tests/: conftest.py  test_api.py  test_edge_cases.py  test_examples.hogtrace  test_integration.py  test_parser.py  test_request_store.py  test_security.py  test_serialization.py  test_setattr_security.py  test_vm.py
vm/: Cargo.toml
vm/fuzz/: Cargo.toml  README.md
vm/fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_end_to_end.rs  fuzz_parser.rs
vm/src/: executor.rs  lib.rs  main.rs  opcodes.rs  python_bindings.rs  python_dispatcher.rs
vm/src/parser/: compiler.rs  lexer.rs  mod.rs
