[project]
name = "hogtrace"
version = "0.1.0"
description = "DTrace-inspired instrumentation language for Python web applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "antlr4-tools>=0.2.2",
    "antlr4-python3-runtime==4.13.1",
]
authors = [
    {name = "PostHog", email = "hey@posthog.com"}
]
keywords = ["tracing", "instrumentation", "observability", "dtrace", "posthog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.6.0",
]
posthog = [
    "posthog>=3.0.0",
]

[project.scripts]
hogtrace = "main:main"

[dependency-groups]
dev = [
    "cython>=3.1.4",
    "pytest>=8.4.2",
    "python-afl>=0.7.3",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "hogtrace._vm_rust"
python-source = "."
features = ["pyo3/extension-module"]
